# tte-pretraining

./: README.md  changelog.md  conf.py  contributing.md  pyproject.toml
src/: pyproject.toml
src/labeling/: generate_tte_labels.py
src/preprocessing/datatasets/data_loaders/: rsna_pe.py
src/preprocessing/datatasets/data_preprocessers/: rsna_pe.py
src/preprocessing/models/: inference_loop.py  vision_encoders.py
src/scripts/0_dataset_preprocessing/INSPECT/: 0_rsna_pe_dicom_2_nifti.py  1_inspect_create_masks.py  1_inspect_create_masks.sh
src/scripts/0_dataset_preprocessing/RNSA_PE/: 0_rsna_pe_create_masks.py  1_rsna_pe_dicom_2_nifti.sh  2_crop_nifti.py  3_simplify_labels.py  4_rsna_pe_preprocessing.py
src/scripts/0_dataset_preprocessing/TOTAL_SEGMENTOR/: total_segmentor_example copy.py  total_segmentor_example.py
src/scripts/1_train/: train.py  train.sh  train_example.py
src/src/pe/: __init__.py
src/tests/: README.md  image_pytest.py  image_unittest.py
src/training/: 1_pretrain_TTE.py  1a_prune_ontology.py  2_finetune_Nerorun_ddp.sh  2_finetune_run_ddp.sh  2_inference.py  3_inference_TTE_V100.sh  3b_load_features_inference.py  networks.py  networks_swin_unetr.py  train.py  utils.py
src/training/i3d/: i3dense.py  i3res.py  inflate.py
tte-pretraining/: pyproject.toml
tte-pretraining/src/: README.md
tte-pretraining/src/tests/: test_pe.py
tte-pretraining/src/training/: 1_pretrain_TTE_H100run_ddp.sh  2_inference.py  3_inference_TTE_RSNA.sh  run_inference_with_loaded_features.sh
tte-pretraining/tests/: README.md  image_pytest.py  test3D.py
(+63 files in other folders)
