[tool.poetry]
name = "pe"
version = "0.1.0"
description = "Improving PE dectaction  with 3D Vision Encoders"
authors = ["Zepeng Frazier Huo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
totalsegmentator = "^1.5.6"
h5py = "^3.9.0"
pyarrow = "^13.0.0"
xmltodict = "^0.13.0"
ipyvolume = "^0.6.3"
ipython-genutils = "^0.2.0"
dicom2nifti = "^2.4.8"
monai = "^1.3.0"
networks = "^0.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
