[tool.poetry]
name = "tte-pretraining"
version = "0.1.0"
description = ""
authors = ["ZepengHuo <frazierhuo@gmail.com>"]
readme = "README.md"
packages = [{include = "tte_pretraining", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
